Tamaño de fruta cambiado a tipo int en vez de String^

--- a/ControldeCalidadController/ControldeCalidadController.vcxproj
+++ b/ControldeCalidadController/ControldeCalidadController.vcxproj
@@ -126,6 +126,9 @@
       <Project>{dd7c3b52-6dd7-4542-a66d-08356d2a08b4}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Runtime.Serialization" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
