--- a/ControldeCalidadController/ControldeCalidadController.vcxproj
+++ b/ControldeCalidadController/ControldeCalidadController.vcxproj
@@ -117,9 +117,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="GestorFruta.cpp" />
+    <ClCompile Include="GestorLote.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GestorFruta.h" />
+    <ClInclude Include="GestorLote.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ControldeCalidadModel\ControldeCalidadModel.vcxproj">
