--- a/ControldeCalidadView/ControldeCalidadView.vcxproj.filters
+++ b/ControldeCalidadView/ControldeCalidadView.vcxproj.filters
@@ -121,5 +121,8 @@
     <EmbeddedResource Include="MantLote.resx">
       <Filter>Archivos de recursos</Filter>
     </EmbeddedResource>
+    <EmbeddedResource Include="NuevoLote.resx">
+      <Filter>Archivos de recursos</Filter>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
